test/typecheck/bad-nested-br.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result i32)
    block $outer
      block $inner
        loop
          i32.const 1
          if 
            br $outer
          end
          br $inner
        end
      end
      i32.const 2
      return
    end
    ;; the existence of the (br $outer) statement requires there to be a
    ;; return statement here, or a value returned from (br $outer).
  ))
(;; STDERR ;;;
out/test/typecheck/bad-nested-br.txt:5:5: error: type mismatch in implicit return, expected [i32] but got []
    block $outer
    ^^^^^
;;; STDERR ;;)
